Fix compass position on small screens

--- a/.gen/style.css.sass
+++ b/.gen/style.css.sass
@@ -201,7 +201,10 @@ pre
 @media (max-width: 490px)
   h1
     margin: 0 0 10px 0
-    font-size: 50px
+    font-size: 54px
+    .compass
+      +scale(0.8)
+      bottom: 10px
   .meta
     .github
       margin-left: (78px - 42px) / 2
@@ -213,3 +216,5 @@ pre
       position: absolute
       top: -2px
       left: -35px
+    .compass
+      margin-top: 60px
